--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "indexeddb-fs",
   "version": "1.0.0",
-  "description": "An fs dedicated for browser. It works based on indexed-db.",
+  "description": "An 'fs' kind of library dedicated for the browser. It works based on indexed-db.",
   "license": "MIT",
   "author": "Paweł Wojtasiński",
   "homepage": "https://github.com/playerony/indexeddb-fs#readme",
@@ -40,6 +40,21 @@
     "prettier-package-json": "^2.6.0",
     "typescript": "^4.3.5"
   },
+  "keywords": [
+    "browser-fs",
+    "commands",
+    "file",
+    "fs",
+    "fs-browser",
+    "fs-web",
+    "indexed-db",
+    "indexeddb",
+    "javascript",
+    "manager",
+    "terminal",
+    "typescript",
+    "web-fs"
+  ],
   "publishConfig": {
     "access": "public"
   },
