--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lint-staged": "^11.0.1",
     "prettier": "^2.3.2",
     "prettier-package-json": "^2.6.0",
+    "ts-jest": "^27.0.3",
     "typescript": "^4.3.5"
   },
   "keywords": [
