--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -5,9 +5,7 @@
   ],
   "exclude": [
     "dist",
-    "node_modules",
-    "/**/*.test.ts",
-    "/**/*.spec.ts"
+    "node_modules"
   ],
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
