--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,7 @@
   },
   "parserOptions": {
     "project": [
-      "./tsconfig.json"
+      "./tsconfig.base.json"
     ]
   },
   "overrides": [
@@ -14,8 +14,7 @@
       "files": [
         "*.ts",
         "*.js"
-      ],
-      "rules": {}
+      ]
     }
   ]
 }
