--- a/package.json
+++ b/package.json
@@ -14,18 +14,23 @@
   },
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc --build tsconfig.build.json",
+    "check": "concurrently \"npm run lint\" \"npm run typecheck\" \"npm run test\"",
     "format": "prettier --write \"src/**/*\"",
-    "lint": "eslint --ext .ts \"src/**/*\"",
+    "lint": "eslint \"src/**/*\"",
     "lint:fix": "eslint --fix \"src/**/*\"",
     "open:coverage": "open ./coverage/lcov-report/src/index.html",
     "prepare": "husky install",
     "test": "jest",
+    "test:ci": "jest --ci --coverage --forceExit",
     "test:coverage": "jest --collectCoverage",
     "test:watch": "jest --watch",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit -p tsconfig.base.json"
   },
   "types": "dist/index.d.ts",
+  "dependencies": {
+    "concurrently": "^6.2.0"
+  },
   "devDependencies": {
     "@types/jest": "^26.0.24",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
@@ -38,6 +43,7 @@
     "lint-staged": "^11.0.1",
     "prettier": "^2.3.2",
     "prettier-package-json": "^2.6.0",
+    "ts-jest": "^27.0.3",
     "typescript": "^4.3.5"
   },
   "keywords": [
