--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
   "scripts": {
     "build": "tsc --build tsconfig.build.json",
     "check": "concurrently \"npm run lint\" \"npm run typecheck\" \"npm run test\"",
-    "format": "prettier --write \"src/**/*\"",
-    "lint": "eslint \"src/**/*\"",
-    "lint:fix": "eslint --fix \"src/**/*\"",
-    "open:coverage": "open ./coverage/lcov-report/src/index.html",
+    "format": "prettier --write \"lib/**/*\"",
+    "lint": "eslint \"lib/**/*\"",
+    "lint:fix": "eslint --fix \"lib/**/*\"",
+    "open:coverage": "open ./coverage/lcov-report/index.html",
     "prepare": "husky install",
     "test": "jest",
     "test:ci": "jest --ci --coverage --forceExit",
