--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,7 +1,7 @@
 {
   "compileOnSave": true,
   "include": [
-    "./src"
+    "./lib"
   ],
   "exclude": [
     "dist",
@@ -22,7 +22,7 @@
     // "sourceMap": true,                           /* Generates corresponding '.map' file. */
     // "outFile": "./",                             /* Concatenate and emit output to single file. */
     "outDir": "dist", /* Redirect output structure to the directory. */
-    "rootDir": "src", /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
+    "rootDir": "lib", /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     // "composite": true,                           /* Enable project compilation */
     // "tsBuildInfoFile": "./",                     /* Specify file to store incremental compilation information */
     "removeComments": true, /* Do not emit comments to output. */
