--- a/.eslintrc
+++ b/.eslintrc
@@ -14,7 +14,10 @@
       "files": [
         "*.ts",
         "*.js"
-      ]
+      ],
+      "rules": {
+        "import/prefer-default-export": "off"
+      }
     }
   ]
 }
