--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "url": "https://github.com/playerony/indexeddb-fs/issues"
   },
   "main": "dist/index.js",
+  "module": "dist/index.es.js",
   "scripts": {
-    "build": "tsc --build tsconfig.build.json",
+    "build": "npm run build:clean && npm run build:dist",
+    "build:clean": "rimraf dist",
+    "build:dist": "rollup -c",
     "check": "concurrently \"npm run lint\" \"npm run typecheck\" \"npm run test\"",
     "format": "prettier --write \"lib/**/*\"",
     "lint": "eslint \"lib/**/*\"",
     "lint:fix": "eslint --fix \"lib/**/*\"",
     "open:coverage": "open ./coverage/lcov-report/index.html",
     "prepare": "husky install",
+    "reinstall-deps": "bash ./scripts/reinstall-deps.sh",
     "test": "jest",
     "test:ci": "jest --ci --coverage --forceExit",
     "test:coverage": "jest --collectCoverage",
@@ -32,6 +36,7 @@
     "concurrently": "^6.2.0"
   },
   "devDependencies": {
+    "@rollup/plugin-babel": "^5.3.0",
     "@types/jest": "^26.0.24",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
@@ -43,6 +48,10 @@
     "lint-staged": "^11.0.1",
     "prettier": "^2.3.2",
     "prettier-package-json": "^2.6.0",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.53.1",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.30.0",
     "ts-jest": "^27.0.3",
     "typescript": "^4.3.5"
   },
