--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "build:dist": "rollup -c",
     "check": "concurrently \"npm run lint\" \"npm run typecheck\" \"npm run test\"",
     "format": "prettier --write \"lib/**/*\"",
-    "lint": "eslint \"lib/**/*\"",
-    "lint:fix": "eslint --fix \"lib/**/*\"",
+    "lint": "eslint \"./lib/**/*\"",
+    "lint:fix": "eslint --fix \"./lib/**/*\"",
     "open:coverage": "open ./coverage/lcov-report/index.html",
     "prepare": "husky install",
     "reinstall-deps": "bash ./scripts/reinstall-deps.sh",
