--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,13 @@
         "*.js"
       ],
       "rules": {
-        "import/prefer-default-export": "off"
+        "operator-linebreak": "off",
+        "object-curly-newline": "off",
+        "implicit-arrow-linebreak": "off",
+        "import/no-cycle": "off",
+        "import/prefer-default-export": "off",
+        "@typescript-eslint/indent": "off",
+        "@typescript-eslint/no-use-before-define": "off"
       }
     }
   ]
