--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "typecheck": "tsc --noEmit -p tsconfig.base.json"
   },
   "types": "dist/index.d.ts",
+  "dependencies": {
+    "path-browserify": "^1.0.1"
+  },
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
@@ -50,6 +53,7 @@
     "prettier-package-json": "^2.6.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.53.1",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
     "ts-jest": "^27.0.3",
