feat: create and read functions for directory

--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
         "*.js"
       ],
       "rules": {
+        "no-console": "off",
         "no-confusing-arrow": "off",
         "operator-linebreak": "off",
         "object-curly-newline": "off",
