feat: make root directory as a file structure root

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,9 +1,10 @@
 {
-  "extends": "./tsconfig.base.json",
+  "extends": "./tsconfig.json",
   "exclude": [
     "dist",
+    "jest/**/*.ts",
     "node_modules",
     "/**/*.test.ts",
-    "/**/*.spec.ts"
+    "/**/*.spec.ts",
   ],
 }
