--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "test:ci": "jest --ci --coverage --forceExit",
     "test:coverage": "jest --collectCoverage",
     "test:watch": "jest --watch",
-    "typecheck": "tsc --noEmit -p tsconfig.base.json"
+    "typecheck": "tsc --noEmit"
   },
   "types": "dist/index.d.ts",
   "dependencies": {
@@ -46,8 +46,10 @@
     "eslint": "^7.30.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-plugin-import": "^2.23.4",
+    "fake-indexeddb": "^3.1.3",
     "husky": "^7.0.1",
     "jest": "^27.0.6",
+    "jest-module-name-mapper": "^0.1.5",
     "lint-staged": "^11.0.1",
     "prettier": "^2.3.2",
     "prettier-package-json": "^2.6.0",
