--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "open:coverage": "open ./coverage/lcov-report/index.html",
     "prepare": "husky install",
     "reinstall-deps": "bash ./scripts/reinstall-deps.sh",
-    "test": "jest",
-    "test:ci": "jest --ci --coverage --forceExit",
-    "test:coverage": "jest --collectCoverage",
-    "test:watch": "jest --watch",
+    "test": "jest  --detectOpenHandles",
+    "test:ci": "jest --ci  --detectOpenHandles --coverage --forceExit",
+    "test:coverage": "jest  --detectOpenHandles --collectCoverage",
+    "test:watch": "jest  --detectOpenHandles --watch",
     "typecheck": "tsc --noEmit"
   },
   "types": "dist/index.d.ts",
