refactor: create core directory

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -13,7 +13,16 @@
       ],
       "@utils": [
         "./lib/utils"
-      ]
+      ],
+      "@constants": [
+        "./lib/constants"
+      ],
+      "@core/*": [
+        "./lib/core/*"
+      ],
+      "@core": [
+        "./lib/core"
+      ],
     }
   }
 }
