--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
   },
   "types": "dist/index.d.ts",
   "dependencies": {
-    "path": "^0.12.7"
+    "jsonschema": "^1.4.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
     "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^19.0.1",
+    "@rollup/plugin-node-resolve": "^13.0.2",
     "@types/jest": "^26.0.24",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
@@ -51,6 +53,7 @@
     "jest": "^27.0.6",
     "jest-module-name-mapper": "^0.1.5",
     "lint-staged": "^11.0.1",
+    "path": "^0.12.7",
     "prettier": "^2.3.2",
     "prettier-package-json": "^2.6.0",
     "rimraf": "^3.0.2",
