--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "bugs": {
     "url": "https://github.com/playerony/indexeddb-fs/issues"
   },
-  "main": "dist/index.js",
+  "main": "dist/index.es.js",
   "module": "dist/index.es.js",
+  "files": [
+    "/dist"
+  ],
   "scripts": {
     "build": "npm run build:clean && npm run build:dist",
     "build:clean": "rimraf dist",
@@ -62,7 +65,9 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
     "ts-jest": "^27.0.3",
-    "typescript": "^4.3.5"
+    "ttypescript": "^1.5.12",
+    "typescript": "^4.3.5",
+    "typescript-transform-paths": "^3.1.0"
   },
   "keywords": [
     "browser-fs",
