--- a/.eslintrc
+++ b/.eslintrc
@@ -28,6 +28,7 @@
         "import/no-cycle": "off",
         "import/prefer-default-export": "off",
         "@typescript-eslint/indent": "off",
+        "@typescript-eslint/no-loop-func": "off",
         "@typescript-eslint/naming-convention": "off",
         "@typescript-eslint/no-use-before-define": "off"
       }
