--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
     "ts-jest": "^27.0.3",
+    "tslib": "^2.3.0",
     "ttypescript": "^1.5.12",
     "typescript": "^4.3.5",
     "typescript-transform-paths": "^3.1.0"
