--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -23,6 +23,12 @@
       "@core": [
         "./lib/core"
       ],
+      "@database/*": [
+        "./lib/database/*"
+      ],
+      "@database": [
+        "./lib/database"
+      ],
     }
   }
 }
