--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "commitlint": "commitlint -- --from=main",
     "format": "prettier --write \"lib/**/*\"",
     "lint": "eslint \"./lib/**/*\"",
-    "lint:fix": "eslint --fix \"./lib/**/*\"",
+    "lint:fix": "yarn lint -- --fix",
     "open:coverage": "open ./coverage/lcov-report/index.html",
     "prepare": "husky install",
     "reinstall-deps": "bash ./scripts/reinstall-deps.sh",
@@ -41,35 +41,41 @@
     "jsonschema": "^1.4.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^12.1.4",
-    "@commitlint/config-conventional": "^12.1.4",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^19.0.1",
-    "@rollup/plugin-node-resolve": "^13.0.2",
-    "@types/jest": "^26.0.24",
-    "@typescript-eslint/eslint-plugin": "^4.28.3",
-    "@typescript-eslint/parser": "^4.28.3",
-    "eslint": "^7.30.0",
-    "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-plugin-import": "^2.23.4",
-    "fake-indexeddb": "^3.1.3",
-    "husky": "^7.0.1",
-    "jest": "^27.0.6",
-    "jest-module-name-mapper": "^0.1.5",
-    "lint-staged": "^11.0.1",
+    "@commitlint/cli": "17.5.0",
+    "@commitlint/config-conventional": "17.4.4",
+    "@rollup/plugin-babel": "6.0.3",
+    "@rollup/plugin-commonjs": "24.0.1",
+    "@rollup/plugin-node-resolve": "15.0.1",
+    "@types/jest": "29.5.0",
+    "@typescript-eslint/eslint-plugin": "5.56.0",
+    "@typescript-eslint/parser": "5.56.0",
+    "eslint": "8.36.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-plugin-folders": "^1.0.4",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-sort-destructure-keys": "^1.5.0",
+    "eslint-plugin-typescript-sort-keys": "^2.3.0",
+    "eslint-plugin-unicorn": "^46.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "fake-indexeddb": "4.0.1",
+    "husky": "8.0.3",
+    "jest": "29.5.0",
+    "jest-module-name-mapper": "0.1.5",
+    "lint-staged": "13.2.0",
     "path": "^0.12.7",
-    "prettier": "^2.3.2",
-    "prettier-package-json": "^2.6.0",
-    "rimraf": "^3.0.2",
-    "rollup": "^2.53.1",
-    "rollup-plugin-node-polyfills": "^0.2.1",
+    "prettier": "2.8.6",
+    "prettier-package-json": "2.8.0",
+    "rimraf": "4.4.1",
+    "rollup": "3.20.0",
+    "rollup-plugin-polyfill-node": "0.12.0",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.30.0",
-    "ts-jest": "^27.0.3",
-    "tslib": "^2.3.0",
-    "ttypescript": "^1.5.12",
-    "typescript": "^4.3.5",
-    "typescript-transform-paths": "^3.1.0"
+    "rollup-plugin-typescript2": "0.34.1",
+    "ts-jest": "29.0.5",
+    "tslib": "2.5.0",
+    "ttypescript": "1.5.15",
+    "typescript": "4.9.5",
+    "typescript-transform-paths": "3.4.6"
   },
   "keywords": [
     "browser-fs",
