ci: update pipeline

--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "build:dist": "rollup -c",
     "check": "yarn lint && yarn typecheck && yarn test",
     "commitlint": "commitlint -- --from=main",
-    "format": "prettier --write \"lib/**/*\"",
+    "format": "yarn prettier --write",
+    "format:check": "yarn prettier --check",
     "lint": "eslint \"./lib/**/*\"",
     "lint:fix": "yarn lint -- --fix",
     "open:coverage": "open ./coverage/lcov-report/index.html",
     "prepare": "husky install",
+    "prettier": "prettier \"lib/**/*\"",
     "reinstall-deps": "bash ./scripts/reinstall-deps.sh",
     "test": "jest --detectOpenHandles --verbose",
     "test:ci": "jest --ci --detectOpenHandles --coverage --forceExit",
