--- a/package.json
+++ b/package.json
@@ -18,16 +18,18 @@
     "/dist"
   ],
   "scripts": {
-    "build": "npm run build:clean && npm run build:dist",
+    "build": "yarn build:clean && yarn build:dist",
     "build:clean": "rimraf dist",
     "build:dist": "rollup -c",
-    "check": "npm run lint && npm run typecheck && npm run test",
+    "check": "yarn lint && yarn typecheck && yarn test",
     "commitlint": "commitlint -- --from=main",
-    "format": "prettier --write \"lib/**/*\"",
+    "format": "yarn prettier --write",
+    "format:check": "yarn prettier --check",
     "lint": "eslint \"./lib/**/*\"",
     "lint:fix": "yarn lint -- --fix",
     "open:coverage": "open ./coverage/lcov-report/index.html",
     "prepare": "husky install",
+    "prettier": "prettier \"lib/**/*\"",
     "reinstall-deps": "bash ./scripts/reinstall-deps.sh",
     "test": "jest --detectOpenHandles --verbose",
     "test:ci": "jest --ci --detectOpenHandles --coverage --forceExit",
