chore: add useful shell scripts

--- a/package.json
+++ b/package.json
@@ -25,12 +25,17 @@
     "commitlint": "commitlint -- --from=main",
     "format": "yarn prettier --write",
     "format:check": "yarn prettier --check",
+    "gcb": "bash ./scripts/git-create-branch.sh",
+    "gcdwp": "bash ./scripts/git-checkout-develop-with-pull.sh",
+    "gpc": "bash ./scripts/git-push-changes.sh",
+    "grlc": "bash ./scripts/git-reset-local-changes.sh",
     "lint": "eslint \"./lib/**/*\"",
     "lint:fix": "yarn lint -- --fix",
     "open:coverage": "open ./coverage/lcov-report/index.html",
     "prepare": "husky install",
     "prettier": "prettier \"lib/**/*\"",
-    "reinstall-deps": "bash ./scripts/reinstall-deps.sh",
+    "reinstall-node-modules": "bash ./scripts/reinstall-node-modules.sh",
+    "rlb": "bash ./scripts/remove-local-branches.sh",
     "test": "jest --detectOpenHandles --verbose",
     "test:ci": "jest --ci --detectOpenHandles --coverage --forceExit",
     "test:coverage": "jest --detectOpenHandles --collectCoverage",
