--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,22 @@
   "useTabs": false,
   "printWidth": 120,
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "importOrder": [
+    "<THIRD_PARTY_MODULES>",
+    "^@framework",
+    "^@framework/(.*)$",
+    "^@database",
+    "^@database/(.*)$",
+    "^@utils",
+    "^@utils/(.*)$",
+    "^@constants",
+    "^@types",
+    "^@types/(.*)$",
+    "^[./]"
+  ],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true,
+  "importOrderGroupNamespaceSpecifiers": true,
+  "plugins": ["@trivago/prettier-plugin-sort-imports"]
 }
