--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@rollup/plugin-babel": "6.0.3",
     "@rollup/plugin-commonjs": "24.0.1",
     "@rollup/plugin-node-resolve": "15.0.1",
+    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/jest": "29.5.0",
     "@typescript-eslint/eslint-plugin": "5.56.0",
     "@typescript-eslint/parser": "5.56.0",
