--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "eslint-plugin-unicorn": "^46.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "fake-indexeddb": "4.0.1",
-    "husky": "8.0.3",
+    "husky": "^8.0.0",
     "jest": "29.5.0",
     "jest-module-name-mapper": "0.1.5",
     "lint-staged": "13.2.0",
