--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,10 +1,4 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": [
-    "dist",
-    "jest/**/*.ts",
-    "node_modules",
-    "/**/*.test.ts",
-    "/**/*.spec.ts",
-  ],
+  "exclude": ["dist", "jest/**/*.ts", "node_modules", "/**/*.test.ts", "/**/*.spec.ts"]
 }
