--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -2,33 +2,15 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@types/*": [
-        "./lib/types/*"
-      ],
-      "@types": [
-        "./lib/types"
-      ],
-      "@utils/*": [
-        "./lib/utils/*"
-      ],
-      "@utils": [
-        "./lib/utils"
-      ],
-      "@constants": [
-        "./lib/constants"
-      ],
-      "@framework/*": [
-        "./lib/framework/*"
-      ],
-      "@framework": [
-        "./lib/framework"
-      ],
-      "@database/*": [
-        "./lib/database/*"
-      ],
-      "@database": [
-        "./lib/database"
-      ],
+      "@types/*": ["./lib/types/*"],
+      "@types": ["./lib/types"],
+      "@utils/*": ["./lib/utils/*"],
+      "@utils": ["./lib/utils"],
+      "@constants": ["./lib/constants"],
+      "@framework/*": ["./lib/framework/*"],
+      "@framework": ["./lib/framework"],
+      "@database/*": ["./lib/database/*"],
+      "@database": ["./lib/database"]
     }
   }
 }
