--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "indexeddb-fs",
-  "version": "2.0.2",
+  "version": "2.1.0",
   "description": "An 'fs' kind of library dedicated to the browser",
   "license": "MIT",
   "author": "Paweł Wojtasiński",
@@ -34,7 +34,7 @@
     "lint:fix": "yarn lint -- --fix",
     "open:coverage": "open ./coverage/lcov-report/index.html",
     "prepare": "husky install",
-    "prettier": "prettier \"lib/**/*\"",
+    "prettier": "prettier \"**/*.+(js|ts|json)\"",
     "reinstall-node-modules": "bash ./scripts/reinstall-node-modules.sh",
     "rlb": "bash ./scripts/remove-local-branches.sh",
     "test": "jest --detectOpenHandles --verbose",
@@ -69,7 +69,7 @@
     "eslint-plugin-unicorn": "^46.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "fake-indexeddb": "4.0.1",
-    "husky": "8.0.3",
+    "husky": "^8.0.0",
     "jest": "29.5.0",
     "jest-module-name-mapper": "0.1.5",
     "lint-staged": "13.2.0",
