ci: optimize ci actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,17 +3,15 @@ name: CI
 on: [push]
 
 jobs:
-  pull-request:
-    runs-on: ${{ matrix.os }}
+  push:
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        os:
-          - ubuntu-latest
-        node-version: [18.x]
+        node-version: [16.x, 18.x, 20.x]
     steps:
-      - uses: actions/checkout@v3.0.2
+      - uses: actions/checkout@v3
         with:
-          fetch-depth: 0
+          fetch-depth: 1
 
       - name: Setup node
         uses: actions/setup-node@v3
@@ -21,22 +19,20 @@ jobs:
           node-version: "${{ matrix.node-version }}"
           cache: "yarn"
 
-      - uses: actions/cache@v3.3.1
+      - uses: actions/cache@v2
         with:
-          path: "**/node_modules"
+          path: "~/.cache/yarn"
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
 
       - name: Install dependencies
         run: yarn install
 
-      - name: Typecheck
-        run: yarn typecheck
-
-      - name: Prettier
-        run: yarn format:check
-
-      - name: Lint
-        run: yarn lint
+      - name: Typecheck, format check, and lint
+        run: |
+          yarn typecheck &
+          yarn format:check &
+          yarn lint &
+          wait
 
       - name: Test
         run: yarn test:ci
